--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+      <link rel="stylesheet" href="style.css" />
       <title>Spizzandre: The Website</title>
   </head>
   <body>
