Added first paragraph

--- a/index.html
+++ b/index.html
@@ -5,7 +5,13 @@
       <title>Spizzandre: The Website</title>
   </head>
   <body>
-      <h1>Hello World!</h1>
+      <h1>An Introduction</h1>
       <script src="script.js"></script>
+      <p>At 36 years of age I can say that I have learned some things. Most of the truly important lessons having been learned in the last few years of my life. 
+        However, those lessons are not to be emparted via a website that is essentially self-promotion. Instead let's talk about a few things that are more entertaining; 
+        Star Wars, League of Legends, and finally some shameless self-promotion.</p>
+        
+        <p id="Star Wars"></p>
+     
   </body>
 </html>
