Attempted commit from mac attempt 1

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         However, those lessons are not to be emparted via a website that is essentially self-promotion. Instead let's talk about a few things that are more entertaining; 
         Star Wars, League of Legends, and finally some shameless self-promotion.</p>
         
-        <p id="Star Wars"></p>
+        <p id="Star Wars">I love Star Wars. And more importantly I love that this information was commited from a difference source than the above</p>
      
   </body>
 </html>
